
include_directories(${PROJECT_SOURCE_DIR}/src/libtoast)
include_directories(${PROJECT_SOURCE_DIR}/src/libtoast/capi)
include_directories(${PROJECT_SOURCE_DIR}/src/libtoast/fod)
include_directories(${PROJECT_SOURCE_DIR}/src/libtoast/fod/toast)
include_directories(${PROJECT_SOURCE_DIR}/src/libtoast/atm)
include_directories(${PROJECT_SOURCE_DIR}/src/libtoast/atm/toast)
include_directories(${PROJECT_SOURCE_DIR}/src/libtoast/test)
include_directories(${PROJECT_SOURCE_DIR}/src/libtoast/test/gtest)
include_directories(${PROJECT_SOURCE_DIR}/src/libtoast/test/gtest/gtest)
include_directories(${PROJECT_SOURCE_DIR}/src/libtoast/test/gtest/gtest/internal)
include_directories(${PROJECT_SOURCE_DIR}/src/libtoast/test/gtest/gtest/internal/custom)
include_directories(${PROJECT_SOURCE_DIR}/src/libtoast/fakempi)
include_directories(${PROJECT_SOURCE_DIR}/src/libtoast/map)
include_directories(${PROJECT_SOURCE_DIR}/src/libtoast/map/toast)
include_directories(${PROJECT_SOURCE_DIR}/src/libtoast/tod)
include_directories(${PROJECT_SOURCE_DIR}/src/libtoast/tod/toast)
include_directories(${PROJECT_SOURCE_DIR}/src/libtoast/math)
include_directories(${PROJECT_SOURCE_DIR}/src/libtoast/math/toast)
include_directories(${PROJECT_SOURCE_DIR}/src/libtoast/math/Random123)
include_directories(${PROJECT_SOURCE_DIR}/src/libtoast/math/Random123/conventional)
include_directories(${PROJECT_SOURCE_DIR}/src/libtoast/math/Random123/features)

add_subdirectory(libtoast)

if(USE_PYTHON)
    add_subdirectory(python)
endif()
